# python-patcher

./: .editorconfig  .gitconfig  .gitignore  .travis.yml  README.md  cacheDownloadSizes.py  cachedDownloadSizes.json  cachedExtractableItems.json  cli.py  cli_interactive.py  commandLineParser.py  common.py  developer_buildFileList.py  fileVersionManagement.py  gameScanner.py  github_actions_changelog_template.md  github_actions_changelog_template.txt  gui.py  higurashiInstallData.json  higurashiInstaller.py  httpGUI.py  installConfiguration.py  installData.json  installerGUI.py  installer_loader.rs  logger.py  main.py  pythonPatcher.py  scriptDownloadList.txt  steamGridExtractor.py  tests.py  travis_build_script.py  travis_install_swift.sh  travis_validate_json.sh  uminekoInstallData.json  uminekoInstaller.py  uminekoNScripterInstaller.py  versionData.json  virusTotalScan.py
.github/workflows/: test_and_deploy.yml
JSONValidator/: Package.swift  README.md
JSONValidator/Tests/: LinuxMain.swift
bootstrap/: .gitattributes  make_archives.py
bootstrap/higu_linux64_installer/: .7za  install  install_safe_mode
bootstrap/higu_mac_installer/: .7za  .aria2c  install.command  install_safe_mode.command
bootstrap/higu_win_installer/: install.bat  python_archive.7z
httpGUI/: .editorconfig  .eslintrc.yml  higurashi.html  index.html  index_old.html  installer.html  loading_screen.html  marked-setup.js  package-lock.json  package.json  python-patcher-index.js  python-patcher-lib.js  python-patcher-loading-screen.js  python-patcher-rest-lib.js  python-patcher-troubleshooting.js  python-patcher-umineko-warning.js  python-patcher-vue-common.js  shutdown.html  style.css  troubleshooting.html  umineko-warning.html  umineko.html
httpGUI/css/: theme.css
install_loader/: .gitignore  Cargo.toml  build.rs  dev_check.bat  dev_run.bat  rust-toolchain.toml
install_loader/src/: archive_extractor.rs  config.rs  console_widget.rs  installer_webview.rs  main.rs  panic_handler.rs  process_monitor.rs  process_runner.rs  program_instance_lock.rs  python_launcher.rs  ui.rs  version.rs  windows_dialog.rs  windows_message_box.rs  windows_utilities.rs
install_loader/src/resources/: mod.rs
install_loader/src/support/: clipboard.rs  mod.rs
installerTests/: testFileVersionManagement.py  testGameScanner.py
news/: Minagoroshi Ch.7.md  Onikakushi Ch.1.md  Umineko Answer (Ch. 5-8).md  Umineko Hane.md  Umineko Question (Ch. 1-4).md  Umineko Tsubasa.md  news.md
winutil/: .gitignore  Cargo.toml
(+14 files in other folders)
