[package]
name = "install_loader"
version = "0.1.0"
authors = ["drojf"]
edition = "2018"

[dependencies]
xz2 = "0.1"
tar = "0.4"
progress-streams = "*"
regex = "1"
backtrace = "*"
clap = "2.33.1"
open = "1"
os_info = { version = "2.0.6", default-features = false }

# imgui dependencies
clipboard = "0.5"
glium = { version = "0.25", default-features = true }
image = "0.22"
imgui = { version = "0.3.0-pre", git = "https://github.com/Gekkio/imgui-rs" }
imgui-glium-renderer = { version = "0.3.0-pre", git = "https://github.com/Gekkio/imgui-rs"}
imgui-winit-support = { version = "0.3.0-pre", git = "https://github.com/Gekkio/imgui-rs" }

# Windows specific dependencies
winapi = { version = "*", features = ["shobjidl", "shtypes"] }
widestring = "*"
win32job = "1"
