[package]
name = "seventh_mod_loader"
version = "0.1.0"
authors = ["drojf"]
edition = "2018"

[dependencies]
xz2 = "0.1"
tar = "0.4.36"
progress-streams = "*"
regex = "1.5.5"
backtrace = "*"
clap = "2.33.1"
open = "1"
os_info = { version = "2.0.6", default-features = false }
fs2 = "0.4.3"
tempfile = "3"
path-clean = "0.1"

# imgui dependencies
clipboard = "0.5"
glium = { version = "0.29", default-features = true }
image = "0.23"
imgui = { version = "0.7.0"}
imgui-glium-renderer = { version = "0.7.0"}
imgui-winit-support = { version = "0.7.0" }

# Windows specific dependencies
winapi = { version = "*", features = ["shobjidl", "shtypes"] }
widestring = "*"
win32job = "1"
